[package]
name = "redlib_tx_silk"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
silk-rs="0.2.0"
minimp3 = "0.5"
claxon = "0.4.3"

[profile.release]
panic = 'abort'
lto = true
opt-level = 'z'


[lib]
name = "redlib_tx_silk"
crate-type = ["cdylib"]
